--- a/.github/workflows/gitinspector.yml
+++ b/.github/workflows/gitinspector.yml
@@ -2,9 +2,9 @@ name: Git Inspector
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   inspect:
