--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -11,13 +11,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+  
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
     - name: make
-      run: make
-    - name: make check
-      run: make check
+      run: make -C 3_Implementation/ all
     - name: make distcheck
       run: make distcheck
