--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,20 +1,17 @@
-name: C/C++ CI
+name: C/C++ CI - Build Status
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-  
     steps:
     - uses: actions/checkout@v2
     - name: make
       run: make -C 3_Implementation/ all
-    - name: make distcheck
-      run: make distcheck
