--- a/.github/workflows/unity.yml
+++ b/.github/workflows/unity.yml
@@ -1,4 +1,4 @@
-name: Unity - Unit Testing
+name: Unit Testing - Unity
 
 on:
   push:
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: make -C 3_Implementation/unity/unity.c
+      run: make -C 3_Implementation/ test
